--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,8 +10,8 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
- *= require jquery.mobile-1.4.5
- *= require jquery.mobile.theme-1.4.5
+ *= require_tree .
+ *= require jquery.mobile
+ *= require main
  */
