working signup/signin popups, refactored partial views

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -35,3 +35,10 @@ body{
 	/*padding: 2% !important;*/
 	/*text-align: center !important;*/
 }
+
+.center-wrapper{
+  text-align: center;
+}
+.center-wrapper * {
+  margin: 0 auto;
+}
