working login and logout

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -39,6 +39,11 @@ body{
 .center-wrapper{
   text-align: center;
 }
+
 .center-wrapper * {
   margin: 0 auto;
+}
+
+#error-signin {
+	color: red;
 }
