--- a/app/views/layouts/_panel_main.erb
+++ b/app/views/layouts/_panel_main.erb
@@ -10,7 +10,8 @@
     <li><a href="#">Settings</a></li>
     <li><a href="#">Help</a></li>
     <li>
-        <a href="#popup-signin" data-rel="popup" data-transition="pop" data-position-to="window">Log in</a>
+        <a href="#popup-signin" id="link-signin" data-rel="popup" data-transition="pop" data-position-to="window">Log in</a>
     </li>
+    <li><a href="#" id="link-signout" style="display:none">Log out</a></li>
   </ul>
 </div>
