--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -4,7 +4,7 @@
 </ul>
 <ul data-role="listview" data-inset="true" data-theme="a">
 	<li data-role="list-divider" data-theme="a">Coming up:</li>
-	<% @user_songs.each do |user_song| %>
-    <%= render :partial => "song_info", :locals => {:song_data => user_song} %>
+	<% @performances.each do |performance| %>
+    <%= render :partial => "song_info", :locals => {:song_data => performance} %>
 	<% end %>
 </ul>
